--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "fastclick": "^1.0.6",
-    "jsonp": "^0.2.1"
+    "better-scroll": "^0.1.15",
+    "jsonp": "^0.2.1",
+    "axios": "^0.16.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
